fix: fixed the website looking too large.. zoomed out to 85%

--- a/styles.css
+++ b/styles.css
@@ -222,6 +222,8 @@ https://www.w3schools.com/howto/howto_css_text_selection.asp */
 }
 
 html {
+  /* zoom out to 85% (doesnt work on firefox) */
+  zoom: 0.85;
   scroll-behavior: smooth;
 }
 
